Update Terraform Workflow to Use Dynamic Database Password
Modify infrastructure deployment workflows to pass database password as a variable:
- Add DB_PASSWORD environment variable to create and destroy workflows
- Update Terraform plan commands to include db_password variable
- Refactor main.tf to use variable-based database password instead of hardcoded value
- Add default value for db_password in variables.tf

--- a/.github/workflows/create-infrastructure.yml
+++ b/.github/workflows/create-infrastructure.yml
@@ -8,6 +8,7 @@ env:
   TF_STATE_BUCKET_PREFIX: "hrgoat-tfstate-do-not-delete"
   TF_STATE_KEY: "terraform/state/prod/terraform.tfstate"
   PROJECT_NAME: "hrgoat"
+  DB_PASSWORD: "hrportaladmin123"
 
 jobs:
   terraform:
@@ -88,7 +89,7 @@ jobs:
     - name: Terraform Plan
       run: |
         cd terraform
-        terraform plan -var="project_name=${{ env.PROJECT_NAME }}" -out=tfplan
+        terraform plan -var="project_name=${{ env.PROJECT_NAME }}" -var="db_password=${{ env.DB_PASSWORD }}" -out=tfplan
 
     - name: Terraform Apply
       run: |
