Improve S3 Bucket Deletion Workflow in Destroy Infrastructure Action
Enhance S3 bucket cleanup process by:
- Adding explicit deletion of object versions
- Removing versioned objects before bucket deletion
- Ensuring complete bucket cleanup during infrastructure destruction

--- a/.github/workflows/destroy-infrastructure.yml
+++ b/.github/workflows/destroy-infrastructure.yml
@@ -112,7 +112,10 @@ jobs:
         # Disable versioning
         echo "Disabling versioning..."
         aws s3api put-bucket-versioning --bucket ${BUCKET_NAME} --versioning-configuration Status=Suspended
-        
+        aws s3api list-object-versions --bucket ${BUCKET_NAME} --query='{Objects: Versions[].{Key:Key,VersionId:VersionId}}' --output json  
+        aws s3api delete-objects --bucket ${BUCKET_NAME} --delete "$(aws s3api list-object-versions --bucket ${BUCKET_NAME} --query='{Objects: Versions[].{Key:Key,VersionId:VersionId}}' --output json
+        aws s3api delete-objects --bucket ${BUCKET_NAME} --delete "$(aws s3api list-object-versions --bucket ${BUCKET_NAME} --query='{Objects: DeleteMarkers[].{Key:Key,VersionId:VersionId}}' --output json)"
+
         # Delete the bucket
         echo "Deleting bucket..."
         aws s3api delete-bucket --bucket ${BUCKET_NAME}
