Fix S3 Bucket Name Retrieval in Destroy Infrastructure Workflow
Correct command syntax for dynamically retrieving S3 bucket name:
- Add missing `$()` for command substitution
- Ensure proper shell variable assignment for bucket name
- Maintain existing logic for finding the most recently created Terraform state bucket

--- a/.github/workflows/destroy-infrastructure.yml
+++ b/.github/workflows/destroy-infrastructure.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Validate bucket name
       id: validate_bucket
       run: |
-        BUCKET=aws s3api list-buckets --query "Buckets[?contains(Name, 'hrgoat-tfstate-do-not-delete')].[Name, CreationDate]" --output json | jq -r 'sort_by(.[1]) | reverse | .[0][0]'
+        BUCKET=$(aws s3api list-buckets --query "Buckets[?contains(Name, 'hrgoat-tfstate-do-not-delete')].[Name, CreationDate]" --output json | jq -r 'sort_by(.[1]) | reverse | .[0][0]')
         echo "Using bucket name: ${BUCKET}"
         
         # Check if bucket exists
