--- a/.github/workflows/create-infrastructure.yml
+++ b/.github/workflows/create-infrastructure.yml
@@ -88,21 +88,30 @@ jobs:
       run: |
         cd terraform
         
-        # Extract clean outputs from Terraform
-        APP_INSTANCE_ID=$(terraform output -raw app_instance_id 2>/dev/null || echo "")
-        RDS_ENDPOINT=$(terraform output -raw rds_endpoint 2>/dev/null || echo "")
-        ECR_REPOSITORY_URL=$(terraform output -raw ecr_repository_url 2>/dev/null || echo "")
-        ALB_DNS_NAME=$(terraform output -raw alb_dns_name 2>/dev/null || echo "")
-        APP_ALB_URL=$(terraform output -raw app_alb_url 2>/dev/null || echo "")
+        # Extract outputs from Terraform
+        RAW_APP_INSTANCE_ID=$(terraform output -raw app_instance_id 2>/dev/null || echo "")
+        RAW_RDS_ENDPOINT=$(terraform output -raw rds_endpoint 2>/dev/null || echo "")
+        RAW_ECR_REPOSITORY_URL=$(terraform output -raw ecr_repository_url 2>/dev/null || echo "")
+        RAW_ALB_DNS_NAME=$(terraform output -raw alb_dns_name 2>/dev/null || echo "")
+        RAW_APP_ALB_URL=$(terraform output -raw app_alb_url 2>/dev/null || echo "")
         
-        # Remove any debug information (everything before and including the first line with the command)
-        APP_INSTANCE_ID=$(echo "$APP_INSTANCE_ID" | grep -v "^\[command\]" | grep -v "^$" | head -1)
-        RDS_ENDPOINT=$(echo "$RDS_ENDPOINT" | grep -v "^\[command\]" | grep -v "^$" | head -1)
-        ECR_REPOSITORY_URL=$(echo "$ECR_REPOSITORY_URL" | grep -v "^\[command\]" | grep -v "^$" | head -1)
-        ALB_DNS_NAME=$(echo "$ALB_DNS_NAME" | grep -v "^\[command\]" | grep -v "^$" | head -1)
-        APP_ALB_URL=$(echo "$APP_ALB_URL" | grep -v "^\[command\]" | grep -v "^$" | head -1)
+        # Print raw outputs for debugging
+        echo "Raw outputs before cleaning:"
+        echo "RAW_APP_INSTANCE_ID: $RAW_APP_INSTANCE_ID"
+        echo "RAW_RDS_ENDPOINT: $RAW_RDS_ENDPOINT"
+        echo "RAW_ECR_REPOSITORY_URL: $RAW_ECR_REPOSITORY_URL"
+        echo "RAW_ALB_DNS_NAME: $RAW_ALB_DNS_NAME"
+        echo "RAW_APP_ALB_URL: $RAW_APP_ALB_URL"
         
-        # Print outputs for debugging
+        # Extract the clean values using cut (more reliable than sed in this case)
+        # This cuts the string at the first occurrence of ::debug:: and keeps only what's before it
+        APP_INSTANCE_ID=$(echo "$RAW_APP_INSTANCE_ID" | cut -d ':' -f 1)
+        RDS_ENDPOINT=$(echo "$RAW_RDS_ENDPOINT" | cut -d ':' -f 1,2,3)
+        ECR_REPOSITORY_URL=$(echo "$RAW_ECR_REPOSITORY_URL" | grep -o '^[^:]*\.dkr\.ecr\.[^:]*\.amazonaws\.com/[^:]*')
+        ALB_DNS_NAME=$(echo "$RAW_ALB_DNS_NAME" | grep -o '^[^:]*\.elb\.amazonaws\.com')
+        APP_ALB_URL=$(echo "$RAW_APP_ALB_URL" | grep -o '^http://[^:]*\.elb\.amazonaws\.com')
+        
+        # Print cleaned outputs for verification
         echo "Extracted outputs after cleaning:"
         echo "APP_INSTANCE_ID: $APP_INSTANCE_ID"
         echo "RDS_ENDPOINT: $RDS_ENDPOINT"
@@ -110,12 +119,12 @@ jobs:
         echo "ALB_DNS_NAME: $ALB_DNS_NAME"
         echo "APP_ALB_URL: $APP_ALB_URL"
         
-        # Export to GitHub environment and output variables with the correct format
-        echo "app_instance_id=${APP_INSTANCE_ID}" >> "$GITHUB_OUTPUT"
-        echo "rds_endpoint=${RDS_ENDPOINT}" >> "$GITHUB_OUTPUT"
-        echo "ecr_repository_url=${ECR_REPOSITORY_URL}" >> "$GITHUB_OUTPUT"
-        echo "alb_dns_name=${ALB_DNS_NAME}" >> "$GITHUB_OUTPUT"
-        echo "app_alb_url=${APP_ALB_URL}" >> "$GITHUB_OUTPUT"
+        # Export to GitHub output variables with the correct format
+        echo "app_instance_id=$APP_INSTANCE_ID" >> "$GITHUB_OUTPUT"
+        echo "rds_endpoint=$RDS_ENDPOINT" >> "$GITHUB_OUTPUT"
+        echo "ecr_repository_url=$ECR_REPOSITORY_URL" >> "$GITHUB_OUTPUT"
+        echo "alb_dns_name=$ALB_DNS_NAME" >> "$GITHUB_OUTPUT"
+        echo "app_alb_url=$APP_ALB_URL" >> "$GITHUB_OUTPUT"
 
   build-and-deploy:
     name: 'Build and Deploy Application'
