--- a/.github/workflows/create-infrastructure.yml
+++ b/.github/workflows/create-infrastructure.yml
@@ -210,6 +210,27 @@ jobs:
           exit 1
         fi
 
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+        cache: 'npm'
+
+    - name: Build frontend
+      run: |
+        # Install dependencies
+        npm ci
+
+        # Build frontend to create dist directory
+        echo "Building frontend..."
+        npm run build
+        
+        # Verify dist directory was created
+        if [ ! -d "./dist" ]; then
+          echo "::error::Frontend build failed, dist directory not created"
+          exit 1
+        fi
+        echo "Frontend build successful!"
 
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
@@ -291,7 +312,7 @@ jobs:
         echo "RDS_PASSWORD: ${{ env.RDS_PASSWORD }}"
         
         # Create commands JSON string
-        COMMANDS_JSON='["docker stop hrportal || true", "docker rm hrportal || true", "aws ecr get-login-password --region '"${{ env.AWS_REGION }}"' | docker login --username AWS --password-stdin '"${{ steps.login-ecr.outputs.registry }}"'", "docker pull '"${{ steps.build-image.outputs.image }}"'", "docker run -d --name hrportal -p 80:80 -e DB_HOST=\"'"$DB_HOST"'\" -e DB_USER=\"'"${{ env.RDS_USER }}"'\" -e DB_PASSWORD=\"'"${{ env.RDS_PASSWORD }}"'\" -e DB_NAME=\"'"${{ env.RDS_DATABASE }}"'\" '"${{ steps.build-image.outputs.image }}"'", "docker ps | grep hrportal"]'
+        COMMANDS_JSON='["docker stop hrportal || true", "docker rm hrportal || true", "aws ecr get-login-password --region '"${{ env.AWS_REGION }}"' | docker login --username AWS --password-stdin '"${{ steps.login-ecr.outputs.registry }}"'", "docker pull '"${{ steps.build-image.outputs.image }}"'", "docker run -d --name hrportal -p 80:80 -p 5001:5001 -e DB_HOST=\"'"$DB_HOST"'\" -e DB_USER=\"'"${{ env.RDS_USER }}"'\" -e DB_PASSWORD=\"'"${{ env.RDS_PASSWORD }}"'\" -e DB_NAME=\"'"${{ env.RDS_DATABASE }}"'\" -e FRONTEND_PORT=\"80\" -e BACKEND_PORT=\"5002\" -e VITE_BASE_URL=\"http://localhost\" '"${{ steps.build-image.outputs.image }}"'", "docker ps | grep hrportal"]'
         
         echo "Using commands: $COMMANDS_JSON"
         
